--- a/complete-web-development-bangla-resources-master/complete-web-development-bangla-resources-master/shopping-cart/index.html
+++ b/complete-web-development-bangla-resources-master/complete-web-development-bangla-resources-master/shopping-cart/index.html
@@ -65,7 +65,7 @@
 
                      <div class="col-md-4 status">
                         <h5 id="sub-total">$1,278</h5>
-                        <h5>$0</h5>
+                        <h5 id="tax-total">$0</h5>
                         <h5 id="total">$1,278</h5>
                      </div>
                   </div>
@@ -157,8 +157,13 @@
          const caseCount=parseInt(caseInput.value);
 
          const totalPrice=phoneCount*1219+caseCount*59;
-         document.getElementById('sub-total').innerText=totalPrice;
-         document.getElementById('total').innerText='$'+ totalPrice;
+         document.getElementById('sub-total').innerText= '$'+totalPrice;
+         const tax=totalPrice*.15;
+         const taxFloat=tax.toFixed(2);
+         document.getElementById('tax-total').innerText='$'+ taxFloat;
+         const payTotal= +totalPrice+ +taxFloat;
+         document.getElementById('total').innerText='$'+ payTotal;
+
       }
 
       
